<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/white"
             tools:context="com.bakingapp.velu.ichirakurecipes.ui.RecipeStepsFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:scrollbars="vertical"/>

</FrameLayout>
