<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:orientation="horizontal"
    android:padding="4dp">

    <TextView
        android:id="@+id/recipe_step_no"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="14sp"
        tools:text="1"/>

    <TextView
        android:id="@+id/recipe_step"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:textSize="14sp"
        tools:text="Recipe Introduction"/>

</LinearLayout>