<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.bakingapp.velu.ichirakurecipes.ui.RecipeVideoFragment">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/short_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Prebake cookie crust."
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="4. Press the cookie mixture into the bottom and slightly up the sides of the prepared pan. Bake for 11 minutes and then let cool."
            android:layout_margin="8dp"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>
